package tomer.spivak.androidstudio2dgame.Buildings;

public class Building {
}
